# fastapi_docker

compose_db/: .gitignore  compose.yaml
devcont/: Dockerfile.dev  pyproject.toml
hellodev/: Dockerfile.dev  pyproject.toml
hicompose/: Dockerfile.dev  README.md  compose.yaml  compose.yml  pyproject.toml
hicompose/hicompose/: main.py
kafkadocker/: pyproject.toml
