[tool.poetry]
name = "hellodev"
version = "0.1.0"
description = ""
authors = ["ABDUL KHALIQ <thenewagedevelopers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
